Sports icons style on about page

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@ layout: default
     <h1>Les sports</h1>
     <p>Le programme sportif des Jeux Olympiques de la Jeunesse d’hiver s’apparente au programme des Jeux Olympiques d’hiver, avec des variations et innovations dans les disciplines proposées par les fédérations internationales. Les sports au programme sont&nbsp;:</p>
     <div class="pictos row">
-      <div class="col-md-4">
+      <div class="col-md-4 col-xs-6">
         <div class="pictos-grp row">
           <div class="col-md-3">
             <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 8vw, 101.65625px" src="images/LS2020-pictos-RGB-MULTICOLOR-2-biathlon.png" srcset="images/LS2020-pictos-RGB-MULTICOLOR-2-biathlon.png 500w, images/LS2020-pictos-RGB-MULTICOLOR-2-biathlon.png 800w, images/LS2020-pictos-RGB-MULTICOLOR-2-biathlon.png 1004w">
@@ -35,6 +35,8 @@ layout: default
             <a class="links_sports" href="#">Biathlon</a>
           </div>
         </div>
+      </div>
+      <div class="col-md-4 col-xs-6">
         <div class="pictos-grp row">
           <div class="col-md-3">
             <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 8vw, 101.65625px" src="images/LS2020-pictos-RGB-MULTICOLOR-9-curling.png" srcset="images/LS2020-pictos-RGB-MULTICOLOR-9-curling.png 500w, images/LS2020-pictos-RGB-MULTICOLOR-9-curling.png 800w, images/LS2020-pictos-RGB-MULTICOLOR-9-curling.png 1004w">
@@ -43,6 +45,8 @@ layout: default
             <a class="links_sports" href="#">Curling</a>
           </div>
         </div>
+      </div>
+      <div class="col-md-4 col-xs-6">
         <div class="pictos-grp row">
           <div class="col-md-3">
             <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 8vw, 101.65625px" src="images/LS2020-pictos-RGB-MULTICOLOR-12-ski-freestyle.png" srcset="images/LS2020-pictos-RGB-MULTICOLOR-12-ski-freestyle.png 500w, images/LS2020-pictos-RGB-MULTICOLOR-12-ski-freestyle.png 800w, images/LS2020-pictos-RGB-MULTICOLOR-12-ski-freestyle.png 1004w">
@@ -51,6 +55,8 @@ layout: default
             <a class="links_sports" href="#">Ski Freestyle</a>
           </div>
         </div>
+      </div>
+      <div class="col-md-4 col-xs-6">
         <div class="pictos-grp row">
           <div class="col-md-3">
             <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 8vw, 101.65625px" src="images/LS2020-pictos-RGB-MULTICOLOR-13-bobsleigh.png" srcset="images/LS2020-pictos-RGB-MULTICOLOR-13-bobsleigh.png 500w, images/LS2020-pictos-RGB-MULTICOLOR-13-bobsleigh.png 800w, images/LS2020-pictos-RGB-MULTICOLOR-13-bobsleigh.png 1004w">
@@ -59,6 +65,8 @@ layout: default
             <a class="links_sports" href="#">Bobsleigh</a>
           </div>
         </div>
+      </div>
+      <div class="col-md-4 col-xs-6">
         <div class="pictos-grp row">
           <div class="col-md-3">
             <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 8vw, 101.65625px" src="images/LS2020-pictos-RGB-MULTICOLOR-15-luge.png" srcset="images/LS2020-pictos-RGB-MULTICOLOR-15-luge.png 500w, images/LS2020-pictos-RGB-MULTICOLOR-15-luge.png 800w, images/LS2020-pictos-RGB-MULTICOLOR-15-luge.png 1004w">
@@ -68,7 +76,7 @@ layout: default
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-xs-6">
         <div class="pictos-grp row">
           <div class="col-md-3">
             <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 8vw, 101.65625px" src="images/LS2020-pictos-RGB-MULTICOLOR-4-combine-nordique.png" srcset="images/LS2020-pictos-RGB-MULTICOLOR-4-combine-nordique.png 500w, images/LS2020-pictos-RGB-MULTICOLOR-4-combine-nordique.png 800w, images/LS2020-pictos-RGB-MULTICOLOR-4-combine-nordique.png 1004w">
@@ -77,6 +85,8 @@ layout: default
             <a class="links_sports" href="#">Combiné nordique</a>
           </div>
         </div>
+      </div>
+      <div class="col-md-4 col-xs-6">
         <div class="pictos-grp row">
           <div class="col-md-3">
             <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 8vw, 101.65625px" src="images/LS2020-pictos-RGB-MULTICOLOR-5-hockey-sur-glace.png" srcset="images/LS2020-pictos-RGB-MULTICOLOR-5-hockey-sur-glace.png 500w, images/LS2020-pictos-RGB-MULTICOLOR-5-hockey-sur-glace.png 800w, images/LS2020-pictos-RGB-MULTICOLOR-5-hockey-sur-glace.png 1004w">
@@ -85,6 +95,8 @@ layout: default
             <a class="links_sports" href="#">Hockey sur glace</a>
           </div>
         </div>
+      </div>
+      <div class="col-md-4 col-xs-6">
         <div class="pictos-grp row">
           <div class="col-md-3">
             <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 8vw, 101.65625px" src="images/LS2020-pictos-RGB-MULTICOLOR-6-patinage-artistique.png" srcset="images/LS2020-pictos-RGB-MULTICOLOR-6-patinage-artistique.png 500w, images/LS2020-pictos-RGB-MULTICOLOR-6-patinage-artistique.png 800w, images/LS2020-pictos-RGB-MULTICOLOR-6-patinage-artistique.png 1004w">
@@ -93,6 +105,8 @@ layout: default
             <a class="links_sports" href="#">Patinage artistique</a>
           </div>
         </div>
+      </div>
+      <div class="col-md-4 col-xs-6">
         <div class="pictos-grp row">
           <div class="col-md-3">
             <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 8vw, 101.65625px" src="images/LS2020-pictos-RGB-MULTICOLOR-11-ski-alpin.png" srcset="images/LS2020-pictos-RGB-MULTICOLOR-11-ski-alpin.png 500w, images/LS2020-pictos-RGB-MULTICOLOR-11-ski-alpin.png 800w, images/LS2020-pictos-RGB-MULTICOLOR-11-ski-alpin.png 1004w">
@@ -101,57 +115,12 @@ layout: default
             <a class="links_sports" href="#">Ski alpin</a>
           </div>
         </div>
-        <div class="pictos-grp row">
-          <div class="col-md-3">
-            <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 8vw, 101.65625px" src="images/LS2020-pictos-RGB-MULTICOLOR-7-patinage-vitesse.png" srcset="images/LS2020-pictos-RGB-MULTICOLOR-7-patinage-vitesse.png 500w, images/LS2020-pictos-RGB-MULTICOLOR-7-patinage-vitesse.png 800w, images/LS2020-pictos-RGB-MULTICOLOR-7-patinage-vitesse.png 1004w">
-          </div>
-          <div class="col-md-9">
-            <a class="links_sports" href="#">Patinage de vitesse</a>
-          </div>
-        </div>
       </div>
-      <div class="col-md-4">
-        <div class="pictos-grp row">
-          <div class="col-md-3">
-            <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 8vw, 101.65625px" src="images/LS2020-pictos-RGB-MULTICOLOR-8-short-track.png" srcset="images/LS2020-pictos-RGB-MULTICOLOR-8-short-track.png 500w, images/LS2020-pictos-RGB-MULTICOLOR-8-short-track.png 800w, images/LS2020-pictos-RGB-MULTICOLOR-8-short-track.png 1004w">
-          </div>
-          <div class="col-md-9">
-            <a class="links_sports" href="#">Patinage de vitesse sur piste courte (short track)</a>
-          </div>
-        </div>
-        <div class="pictos-grp row">
-          <div class="col-md-3">
-            <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 8vw, 101.65625px" src="images/LS2020-pictos-RGB-MULTICOLOR-3-saut-a-ski.png" srcset="images/LS2020-pictos-RGB-MULTICOLOR-3-saut-a-ski.png 500w, images/LS2020-pictos-RGB-MULTICOLOR-3-saut-a-ski.png 800w, images/LS2020-pictos-RGB-MULTICOLOR-3-saut-a-ski.png 1004w">
-          </div>
-          <div class="col-md-9">
-            <a class="links_sports" href="#">Saut à ski</a>
-          </div>
-        </div>
-        <div class="pictos-grp row">
-          <div class="col-md-3">
-            <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 8vw, 101.65625px" src="images/LS2020-pictos-RGB-MULTICOLOR-14-skeleton.png" srcset="images/LS2020-pictos-RGB-MULTICOLOR-14-skeleton.png 500w, images/LS2020-pictos-RGB-MULTICOLOR-14-skeleton.png 800w, images/LS2020-pictos-RGB-MULTICOLOR-14-skeleton.png 1004w">
-          </div>
-          <div class="col-md-9">
-            <a class="links_sports" href="#">Skeleton</a>
-          </div>
-        </div>
-        <div class="pictos-grp row">
-          <div class="col-md-3">
-            <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 8vw, 101.65625px" src="images/LS2020-pictos-RGB-MULTICOLOR-1-ski-de-fond.png" srcset="images/LS2020-pictos-RGB-MULTICOLOR-1-ski-de-fond.png 500w, images/LS2020-pictos-RGB-MULTICOLOR-1-ski-de-fond.png 800w, images/LS2020-pictos-RGB-MULTICOLOR-1-ski-de-fond.png 1004w">
-          </div>
-          <div class="col-md-9">
-            <a class="links_sports" href="#">Ski de fond</a>
-          </div>
-        </div>
-        <div class="pictos-grp row">
-          <div class="col-md-3">
-            <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 8vw, 101.65625px" src="images/LS2020-pictos-RGB-MULTICOLOR-10-snowboard.png" srcset="images/LS2020-pictos-RGB-MULTICOLOR-10-snowboard.png 500w, images/LS2020-pictos-RGB-MULTICOLOR-10-snowboard.png 800w, images/LS2020-pictos-RGB-MULTICOLOR-10-snowboard.png 1004w">
-          </div>
-          <div class="col-md-9">
-            <a class="links_sports" href="#">Snowboard</a>
-          </div>
-        </div>
-      </div>
+    </div>
+    <div class="pictos row">
+      
+    </div>
+    <div class="pictos row">
     </div>
     <p class="about_the_yog_p descr_pictos"><a href="#" class="link_site">Découvrez les sites de compétition ici</a>
     </p>
