Fix bug news display on home page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: default
     </div>
   </div>
 </div>
-<div class="latestnews_section container">
+<div class="news_section container">
     <h1 class="h1_big_news h1_newsletter_cta">Latest news</h1>
     <div class="row">
       {% for new in site.data.contentful.spaces.news.news limit:3 %}
