--- a/about.html
+++ b/about.html
@@ -1,22 +1,28 @@
 ---
 layout: default
 ---
-<div class="about_yog_2 about_yog_section">
-  <div class="about_yog_wrap container">
-    <div class="row_about_yog_1 row">
-      <div class="col-md-5">
-        <div class="about_img"></div>
+<div class="about_yog about_yog_1 ">
+  <div class="container">
+    <h1>Les Jeux Olympiques de la Jeunesse : Concourir, apprendre et partager !</h1>
+    <div class="row">
+      <div class="col-md-6">
+        <img srcset="images/19-02-16-Skeleton-Womens-Individual-04.jpg" alt="">
       </div>
-      <div class="col-md-5">
-        <p class="about_the_yog_p floating_txt_right">The Youth Olympic Games are an elite sporting event for young people from all over the world. The sports programme is based on that of the Olympic Games, with 28 sports featured on the summer programme and 7 on the winter programme.</p>
+      <div class="col-md-6">
+        <p>Les Jeux Olympiques de la Jeunesse sont un événement sportif olympique international du plus haut niveau pour les athlètes âgés de 15 à 18 ans.<br><br>Ils associent la performance sportive, la culture et l'éducation dans un réel festival du sport. Ils ont comme objectif d’encourager la jeunesse à adopter et vivre selon les valeurs positives du sport – le respect de l’autre, de soi, de notre environnement, l’amitié entre les peuples et les cultures, l’excellence dans le don de soi – et à en devenir les ambassadeurs à travers le monde.<br><br>Par leur vocation, les Jeux Olympiques de la Jeunesse veulent être un incubateur d’innovation pour les événements sportifs du futur.</p>
       </div>
     </div>
-    <div class="row_about_yog_2 row">
-      <div class="col-md-7">
-        <p class="about_the_yog_p floating_txt_left">The Youth Olympic Games are an elite sporting event for young people from all over the world. The sports programme is based on that of the Olympic Games, with 28 sports featured on the summer programme and 7 on the winter programme.</p>
+  </div>
+</div>
+<div class="about_yog about_yog_2">
+  <div class="container">
+    <h1>Les Jeux Olympiques de la Jeunesse : Concourir, apprendre et partager !</h1>
+    <div class="row">
+      <div class="col-md-6">
+        <p>Les Jeux Olympiques de la Jeunesse sont un événement sportif olympique international du plus haut niveau pour les athlètes âgés de 15 à 18 ans.<br><br>Ils associent la performance sportive, la culture et l'éducation dans un réel festival du sport. Ils ont comme objectif d’encourager la jeunesse à adopter et vivre selon les valeurs positives du sport – le respect de l’autre, de soi, de notre environnement, l’amitié entre les peuples et les cultures, l’excellence dans le don de soi – et à en devenir les ambassadeurs à travers le monde.<br><br>Par leur vocation, les Jeux Olympiques de la Jeunesse veulent être un incubateur d’innovation pour les événements sportifs du futur.</p>
       </div>
-      <div class="col-md-5">
-        <div class="about_img"></div>
+      <div class="col-md-6">
+        <img srcset="images/19-02-16-Skeleton-Womens-Individual-04.jpg" alt="">
       </div>
     </div>
   </div>
