Fix image bug about page

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ layout: default
     <h1>Les Jeux Olympiques de la Jeunesse : Concourir, apprendre et partager !</h1>
     <div class="row">
       <div class="col-md-6">
-        <img src="images/19-02-16-Skeleton-Womens-Individual-04-p-1080x720.jpg" alt="">
+        <img src="images/19-02-16-Skeleton-Womens-Individual-04-p-1080x720.jpeg" alt="">
       </div>
       <div class="col-md-6">
         <p>Les Jeux Olympiques de la Jeunesse sont un événement sportif olympique international du plus haut niveau pour les athlètes âgés de 15 à 18 ans.<br><br>Ils associent la performance sportive, la culture et l'éducation dans un réel festival du sport. Ils ont comme objectif d’encourager la jeunesse à adopter et vivre selon les valeurs positives du sport – le respect de l’autre, de soi, de notre environnement, l’amitié entre les peuples et les cultures, l’excellence dans le don de soi – et à en devenir les ambassadeurs à travers le monde.<br><br>Par leur vocation, les Jeux Olympiques de la Jeunesse veulent être un incubateur d’innovation pour les événements sportifs du futur.</p>
@@ -22,7 +22,7 @@ layout: default
         <p>Les Jeux Olympiques de la Jeunesse sont un événement sportif olympique international du plus haut niveau pour les athlètes âgés de 15 à 18 ans.<br><br>Ils associent la performance sportive, la culture et l'éducation dans un réel festival du sport. Ils ont comme objectif d’encourager la jeunesse à adopter et vivre selon les valeurs positives du sport – le respect de l’autre, de soi, de notre environnement, l’amitié entre les peuples et les cultures, l’excellence dans le don de soi – et à en devenir les ambassadeurs à travers le monde.<br><br>Par leur vocation, les Jeux Olympiques de la Jeunesse veulent être un incubateur d’innovation pour les événements sportifs du futur.</p>
       </div>
       <div class="col-md-6">
-        <img srcs="images/19-02-16-Skeleton-Womens-Individual-04-p-1080x720.jpg" alt="">
+        <img src="images/20-02-16-Ice-Hockey-Bronze-Medal-Mens-02-p-1080x717.jpeg" alt="">
       </div>
     </div>
   </div>
