--- a/about.html
+++ b/about.html
@@ -3,23 +3,25 @@ layout: default
 ---
 <div class="about_yog about_yog_1 ">
   <div class="container">
-    <h1>Les Jeux Olympiques de la Jeunesse : Concourir, apprendre et partager !</h1>
+    <h1>{% t pages.about.title1 %}</h1>
     <div class="row">
       <div class="col-md-6">
         <img src="images/19-02-16-Skeleton-Womens-Individual-04-p-1080x720.jpeg" alt="">
       </div>
       <div class="col-md-6">
-        <p>Les Jeux Olympiques de la Jeunesse sont un événement sportif olympique international du plus haut niveau pour les athlètes âgés de 15 à 18 ans.<br><br>Ils associent la performance sportive, la culture et l'éducation dans un réel festival du sport. Ils ont comme objectif d’encourager la jeunesse à adopter et vivre selon les valeurs positives du sport – le respect de l’autre, de soi, de notre environnement, l’amitié entre les peuples et les cultures, l’excellence dans le don de soi – et à en devenir les ambassadeurs à travers le monde.<br><br>Par leur vocation, les Jeux Olympiques de la Jeunesse veulent être un incubateur d’innovation pour les événements sportifs du futur.</p>
+        {% capture text %}{%t pages.about.texte1 %}{% endcapture %}
+        <p>{{ text | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}</p>
       </div>
     </div>
   </div>
 </div>
 <div class="about_yog about_yog_2">
   <div class="container">
-    <h1>Les Jeux Olympiques de la Jeunesse : Concourir, apprendre et partager !</h1>
+    <h1>{% t pages.about.title2 %}</h1>
     <div class="row">
       <div class="col-md-6">
-        <p>Les Jeux Olympiques de la Jeunesse sont un événement sportif olympique international du plus haut niveau pour les athlètes âgés de 15 à 18 ans.<br><br>Ils associent la performance sportive, la culture et l'éducation dans un réel festival du sport. Ils ont comme objectif d’encourager la jeunesse à adopter et vivre selon les valeurs positives du sport – le respect de l’autre, de soi, de notre environnement, l’amitié entre les peuples et les cultures, l’excellence dans le don de soi – et à en devenir les ambassadeurs à travers le monde.<br><br>Par leur vocation, les Jeux Olympiques de la Jeunesse veulent être un incubateur d’innovation pour les événements sportifs du futur.</p>
+        {% capture text %}{%t pages.about.texte2 %}{% endcapture %}
+        <p>{{ text | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}</p>
       </div>
       <div class="col-md-6">
         <img src="images/20-02-16-Ice-Hockey-Bronze-Medal-Mens-02-p-1080x717.jpeg" alt="">
@@ -29,8 +31,8 @@ layout: default
 </div>
 <div class="sports">
   <div class="container">
-    <h1>Les sports</h1>
-    <p>Le programme sportif des Jeux Olympiques de la Jeunesse d’hiver s’apparente au programme des Jeux Olympiques d’hiver, avec des variations et innovations dans les disciplines proposées par les fédérations internationales. Les sports au programme sont&nbsp;:</p>
+    <h1>{% t pages.about.sports_title %}</h1>
+    <p>{% t pages.about.sports_texte %}</p>
     <div class="pictos row">
       <div class="col-md-4 col-xs-6">
         <div class="pictos-grp row">
