--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ layout: default
       <div class="col-md-6">
         <img src="images/19-02-16-Skeleton-Womens-Individual-04-p-1080x720.jpeg" alt="">
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 info-text">
         {% capture text %}{%t pages.about.texte1 %}{% endcapture %}
         <p>{{ text | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}</p>
       </div>
@@ -19,7 +19,7 @@ layout: default
   <div class="container">
     <h1>{% t pages.about.title2 %}</h1>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 info-text">
         {% capture text %}{%t pages.about.texte2 %}{% endcapture %}
         <p>{{ text | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}</p>
       </div>
